<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Home">

    <fragment
        android:id="@+id/nav_Home"
        android:name="com.example.travelagency.ui.Home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/home_fragment"/>
    <fragment
        android:id="@+id/nav_Destinations"
        android:name="com.example.travelagency.ui.Destinations.DestinationsFragment"
        android:label="@string/menu_Destinations"
        tools:layout="@layout/fragment_destinations" />

    <fragment
        android:id="@+id/nav_Agencies"
        android:name="com.example.travelagency.ui.Agencies.AgenciesFragment"
        android:label="@string/menu_Agencies"
        tools:layout="@layout/fragment_agencies" />

    <fragment
        android:id="@+id/nav_Packages"
        android:name="com.example.travelagency.ui.Packages.PackagesFragment"
        android:label="@string/menu_Packages"
        tools:layout="@layout/fragment_packages" />
    <fragment
        android:id="@+id/nav_Settings"
        android:name="com.example.travelagency.ui.Settings.SettingsFragment"
        android:label="@string/menu_Settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/nav_Query"
        android:name="com.example.travelagency.ui.QueryFragment.QueryFragment"
        android:label="@string/Queries"
        tools:layout="@layout/fragment_query"/>
</navigation>