<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    android:fadeScrollbars="true"
    android:isScrollContainer="true"
    android:keepScreenOn="true"
    tools:context=".ui.Destinations.DestinationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="289dp"
                android:clickable="false"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="226dp"
                    android:layout_height="127dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:contextClickable="true"
                    android:src="@drawable/london" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/london"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="289dp"
                android:clickable="false"
                android:clipToPadding="false"
                android:contextClickable="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="164dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:contextClickable="false"
                    android:src="@drawable/paris" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/paris"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:clickable="false"
                android:clipToPadding="false"
                android:contextClickable="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="164dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:contextClickable="true"
                    android:src="@drawable/bahamas"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/bahamas"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="289dp"
                android:clickable="false"
                android:clipToPadding="false"
                android:contextClickable="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="164dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:contextClickable="true"
                    android:src="@drawable/la" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/la"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="289dp"
                android:clickable="false"
                android:clipToPadding="false"
                android:contextClickable="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/img5"
                    android:layout_width="164dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:contextClickable="true"
                    android:src="@drawable/barcelona" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/barcelona"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/bt2"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:insetLeft="5dp"
                android:text="Show Trip Details" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textColor="#453A3A"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
