<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    tools:context=".ui.form.FormFragment">


    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittextradius"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"
                    android:textColor="#143d59"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edittextradius"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Surname"
                    android:inputType="textPersonName"
                    android:textColor="#2C4251" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edittextradius"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Email"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#143d59" />

                <EditText

                    android:id="@+id/packagecode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextradius"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/packagecode"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#143d59" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/borderline"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addClient"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#0B7A6A"
                    android:fontFamily="serif-monospace"
                    android:text="Submit Client"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/updateClient"
                    android:layout_width="318dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#5E34BD"
                    android:fontFamily="serif-monospace"
                    android:text="Update Client\n(Surname cannot change)"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <Button
                android:id="@+id/deleteClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#ED1111"
                android:fontFamily="serif-monospace"
                android:text="Delete Client\n(Press to open form)"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/edittextradius"
                android:ems="10"
                android:hint=" Enter the surname of the client you want to delete"
                android:inputType="textPersonName"
                android:textColor="#D1C4C4"
                android:textColorHighlight="#CCA7A7"
                android:textColorHint="#4C4747"
                android:visibility="invisible"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/delete2"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="#ED1111"
                android:fontFamily="serif-monospace"
                android:text="Delete"

                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>