<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    android:orientation="vertical"
    tools:context=".ui.QueryFragment.QueryFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextradius"
                android:fontFamily="serif"
                android:text="QUERIES"
                android:textAlignment="center"
                android:textColor="#61CDFF"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="\nQ1:Show all packages id that contain a city starting with the letter 'L'"
                android:textColor="#B12828"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8C1F1F"
                android:text="Run" />

            <TextView
                android:id="@+id/result1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#387C75"
                android:text="Hide"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Q2:Show all packages id that contain the agency 'Ryanair' that costs 350$ or the agency 'Aegean' that costs 550$"
                android:textColor="#B12828"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#812626"
                android:text="Run"
                android:visibility="visible" />

            <TextView
                android:id="@+id/result2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Hide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#387C75"
                android:text="Hide"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Q3:Show all packages id that contain an agency with 7 letters name length and the destination is United Kingdom"
                android:textColor="#B12828"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#872525"
                android:text="Run" />

            <TextView
                android:id="@+id/result3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Hide3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#387C75"
                android:text="Hide"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/showhotels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/Q4"
                android:textColor="#B12828"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>

            <Button
                android:id="@+id/q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#872525"
                android:text="run" />

            <TextView
                android:id="@+id/result4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hide4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#387C75"
                android:text="Hide"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/showhotelspackage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/Q5"
                android:textColor="#B12828"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>

            <Button
                android:id="@+id/q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#872525"
                android:text="run" />

            <TextView
                android:id="@+id/result5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hide5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#387C75"
                android:text="Hide"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/showsurpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/Q7"
                android:textColor="#B12828"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#872525"
                android:text="run" />

            <TextView
                android:id="@+id/result6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hide6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#387C75"
                android:text="Hide"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
